fix horizontal page flipping & overflow scroll

--- a/assets/www/css/anyconference.css
+++ b/assets/www/css/anyconference.css
@@ -8,9 +8,20 @@
     background: #fff;
 }
 
+.all-details-wrap {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+}
+
 .item-details-wrap {
     position: absolute;
     width: 100%;
+    top: 0;
+    bottom: 0;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .fixed {
